--- a/playground_series/4_10_loan_approval_prediction/loan_approval_prediction.ipynb
+++ b/playground_series/4_10_loan_approval_prediction/loan_approval_prediction.ipynb
@@ -6,7 +6,9 @@
    "metadata": {},
    "source": [
     "# Loan Approval Prediction \n",
-    "Playground Series Season 4, Episode 10"
+    "Playground Series Season 4, Episode 10\n",
+    "\n",
+    "[Link](https://www.kaggle.com/competitions/playground-series-s4e10/overview)"
    ]
   },
   {
@@ -60,7 +62,8 @@
    "id": "66985c94",
    "metadata": {},
    "source": [
-    "## EDA"
+    "\n",
+    "# EDA"
    ]
   },
   {
@@ -590,6 +593,29 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ivhko7ie8m",
+   "metadata": {},
+   "source": [
+    "#### Why Accuracy Cannot Be Used Here\n",
+    "\n",
+    "With **85.8% approved (0)** and **14.2% defaulted (1)**, a model that blindly predicts \"approved\" for every applicant would achieve **85.8% accuracy** while catching **zero actual defaulters** — a completely useless model that looks good on paper.\n",
+    "\n",
+    "This is the core problem with accuracy under class imbalance: a model can score highly simply by always predicting the majority class, having learned nothing about the minority class.\n",
+    "\n",
+    "| Model | Accuracy | Defaulters Caught |\n",
+    "|---|---|---|\n",
+    "| Always predict \"approved\" | 85.8% | 0 out of 8,348 |\n",
+    "| Perfect model | 100% | 8,348 out of 8,348 |\n",
+    "\n",
+    "Accuracy treats every error equally, but the errors here are not equal:\n",
+    "- **Missing a defaulter** (false negative) → bank approves a bad loan and loses money\n",
+    "- **Rejecting a good applicant** (false positive) → bank loses a customer\n",
+    "\n",
+    "**AUC-ROC** is the right metric because it evaluates whether the model can *rank* defaulters above non-defaulters across all possible thresholds — a question the majority-predicting model scores exactly **0.5** on, correctly exposing it as no better than random chance."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "blu9yohi9vh",
    "metadata": {},
    "source": [
@@ -824,14 +850,21 @@
    "cell_type": "markdown",
    "id": "7387ym81lcy",
    "metadata": {},
-   "source": [
-    "### Observations\n",
-    "- **`person_age`**: extreme outliers above ~60 (max=123) — cap at 99th percentile (~49)\n",
-    "- **`person_emp_length`**: extreme outliers above ~30 (max=123) — cap at 99th percentile (~17)\n",
-    "- **`person_income`**: strong right skew with high-value outliers ($1.9M) — consider log transform or capping\n",
-    "- **`loan_amnt`** and **`loan_int_rate`**: mild right skew, no extreme outliers worth capping\n",
-    "- **`loan_percent_income`**: a few values near 0.8+ but mostly well-bounded; reflects the income outliers upstream"
-   ]
+   "source": "### Observations\n- **`person_age`**: extreme outliers above ~60 (max=123) — a value of 123 is physically impossible and is a **data entry error**; cap at 99th percentile (~49)\n- **`person_emp_length`**: extreme outliers above ~30 (max=123) — a value of 123 years of employment is physically impossible and is a **data entry error**; cap at 99th percentile (~17). Note: log transformation is not appropriate here because it compresses but does not fix erroneous values — capping is the right solution for bad data\n- **`person_income`**: strong right skew with high-value outliers ($1.9M) — unlike the above, high incomes are *plausible* (not data entry errors); consider capping at 99th percentile or log transformation to reduce skew\n- **`loan_amnt`** and **`loan_int_rate`**: mild right skew, no extreme outliers worth capping\n- **`loan_percent_income`**: a few values near 0.8+ but mostly well-bounded; reflects the income outliers upstream"
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7w5aq4u3mh9",
+   "source": "### Capping vs Removing Outliers\n\nBoth use the same threshold (99th percentile) but act differently:\n\n| | Rows kept | What changes |\n|---|---|---|\n| **Removing** | Fewer | Entire row is deleted |\n| **Capping** | All | Only the extreme value is replaced with the threshold |\n\nRemoving is not viable here because the test set contains the same erroneous values. Kaggle requires a prediction for every test row, so rows cannot be dropped. Capping applies the same threshold to both train and test, ensuring the model always predicts on values within its trained range.",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "id": "u05upfes9yh",
+   "source": "fig, axes = plt.subplots(1, len(num_cols), figsize=(3 * len(num_cols), 4))\nfor i, col in enumerate(num_cols):\n    test.boxplot(column=col, ax=axes[i])\n    axes[i].set_title(col, fontsize=9)\nplt.suptitle('Boxplots — Test Set Numerical Features', y=1.02)\nplt.tight_layout()\nplt.show()\n\nprint('Test set max values:')\nprint(test[num_cols].max())",
+   "metadata": {},
+   "execution_count": null,
+   "outputs": []
   },
   {
    "cell_type": "markdown",
